<resources>
    <string name="app_name">game_list</string>
    <string name="elden_ring">Elden Ring</string>
    <string name="jumbotron_image">Jumbotron Image</string>
    <string name="about_game">About Game</string>
    <string name="developers">Developers</string>
    <string name="fromsoftware">FromSoftware</string>
    <string name="bandai_namco_entertainment">Bandai Namco Entertainment</string>
    <string name="_2022_02_25">2022-02-25</string>
    <string name="_4_4">4.4</string>
    <string name="action">Action</string>
    <string name="rpg">RPG</string>
    <string name="about">The Golden order has been broken.\n\nRise, Tarnished, and be guided by grace to bran dish the power of the elden Ring and become an Elde Lord in the Lands Between.\n\nIn the Lands Between ruled by Queen Marika the Eternal, the Elden Ring, the source of the Erdtree, has been shattered.\n\nMarika’s offspring, demigods all, claimed the sha rds of the Elden Ring known as the Great Runes, and the mad taint of their newfound strength trig gered a war: The Shattering. A war that meant abandonment by the Greater</string>
    <string name="publisher">Publisher</string>
    <string name="review">Review</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
</resources>